[gd_scene load_steps=2 format=3 uid="uid://bp0s85bec8hbh"]

[ext_resource type="Script" path="res://scenes/UI/pause_menu.gd" id="1_o7y12"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_o7y12")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.252028, 0.252028, 0.252028, 0.411765)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -68.0
offset_right = 54.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "продолжить"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "загрузить"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "меню"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "выход"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
